Fix:Settings page scrollbar has been fixed

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,9 @@
 @layer base {
   body {
     @apply font-poppins;
+    overflow: hidden;
   }
+
   :root {
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
